# bash-org-custom-rules

./: .ddsainclude  .gitignore  CODEOWNERS  CONTRIBUTING.md  LICENSE  LICENSE-3rdparty.csv  NOTICE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: issue.md
.github/workflows/: test.yml  upload-rules.yml
rulesets/bufo-rulesets/: no-debugger.yaml  ruleset.yaml
rulesets/cole-test/: ruleset.yaml  test-rule.yaml
rulesets/my-custom-rules/: no-debugger.yaml
scripts/: pull.py  upload.py
tests/: test_upload.py
